--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div data-aos="fade-right" data-aos-duration="2000">
               <div class="img-crop border-3 border-light shadow my-4 mx-auto">
                 <img
-                  src="./assets/images/cowo.png"
+                  src="./assets/images/5.png"
                   alt="cowo"
                   onclick="util.modal(this)" />
               </div>
@@ -210,7 +210,7 @@
             <div data-aos="fade-left" data-aos-duration="2000">
               <div class="img-crop border-3 border-light shadow my-4 mx-auto">
                 <img
-                  src="./assets/images/cewe.png"
+                  src="./assets/images/3.png"
                   alt="cewe"
                   onclick="util.modal(this)" />
               </div>
@@ -350,145 +350,98 @@
               class="carousel slide"
               data-bs-ride="carousel">
 
-            <div class="carousel-indicators">
-              <!-- Tambahkan indikator untuk setiap slide -->
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="0"
-                      class="active"
-                      aria-current="true"
-                      aria-label="Slide 1"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="1"
-                      aria-label="Slide 2"></button>
-              <!-- Tambahkan indikator hingga Slide 10 -->
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="2"
-                      aria-label="Slide 3"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="3"
-                      aria-label="Slide 4"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="4"
-                      aria-label="Slide 5"></button>
-              </div>
-              <div class="carousel-inner rounded-4">
-                <div class="carousel-item active">
-                  <img
-                    src="/assets/images/galeri1.jpeg"
-                    class="d-block w-100"
-                     />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri2.jpeg"
-                    class="d-block w-100"
-                     />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri3.jpeg"
-                    class="d-block w-100"
-                     />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri4.jpeg"
-                    class="d-block w-100"
-                     />
-                </div>
-            <div
-              id="carousel-foto-dua"
-              data-aos="fade-up"
-              data-aos-duration="1500"
-              class="carousel slide mt-4"
-              data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="0"
-                  class="active"
-                  aria-current="true"
-                  aria-label="Slide 1"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="1"
-                  aria-label="Slide 2"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="2"
-                  aria-label="Slide 3"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="3"
-                  aria-label="Slide 4"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="4"
-                  aria-label="Slide 5"></button>  
-              </div>
+            <div id="carousel-foto-satu" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <!-- Indikator untuk setiap slide -->
+    <button type="button"
+            data-bs-target="#carousel-foto-satu"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-satu"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-satu"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-satu"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner rounded-4">
+    <div class="carousel-item active">
+      <img src="/assets/images/galeri1.jpeg" class="d-block w-100" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri2.jpeg" class="d-block w-100" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri3.jpeg" class="d-block w-100" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri4.jpeg" class="d-block w-100" />
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-foto-satu" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel-foto-satu" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-              <div class="carousel-inner rounded-4">
-                <div class="carousel-item active">
-                  <img
-                    src="/assets/images/galeri5.jpeg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri6.jpeg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri7.jpeg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri8.jpeg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                </div>
-              </div>
+<div id="carousel-foto-dua" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <!-- Indikator untuk setiap slide -->
+    <button type="button"
+            data-bs-target="#carousel-foto-dua"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-dua"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-dua"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    <button type="button"
+            data-bs-target="#carousel-foto-dua"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner rounded-4">
+    <div class="carousel-item active">
+      <img src="/assets/images/galeri5.jpeg" class="d-block w-100" onclick="util.modal(this)" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri6.jpeg" class="d-block w-100" onclick="util.modal(this)" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri7.jpeg" class="d-block w-100" onclick="util.modal(this)" />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/galeri8.jpeg" class="d-block w-100" onclick="util.modal(this)" />
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-foto-dua" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel-foto-dua" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carousel-foto-dua"
-                data-bs-slide="prev">
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carousel-foto-dua"
-                data-bs-slide="next">
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
       </section>
 
       <!-- Wave Separator -->
