--- a/index.html
+++ b/index.html
@@ -350,95 +350,242 @@
               class="carousel slide"
               data-bs-ride="carousel">
 
-            <div id="carousel-foto-satu" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button"
-            data-bs-target="#carousel-foto-satu"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-satu"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-satu"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-satu"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
-  </div>
-  <div class="carousel-inner rounded-4">
-    <div class="carousel-item active">
-      <img src="/assets/images/galeri1.jpeg" class="d-block w-100" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri2.jpeg" class="d-block w-100" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri3.jpeg" class="d-block w-100" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri4.jpeg" class="d-block w-100" />
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-foto-satu" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carousel-foto-satu" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+            <div class="carousel-indicators">
+              <!-- Tambahkan indikator untuk setiap slide -->
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="0"
+                      class="active"
+                      aria-current="true"
+                      aria-label="Slide 1"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="1"
+                      aria-label="Slide 2"></button>
+              <!-- Tambahkan indikator hingga Slide 10 -->
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="2"
+                      aria-label="Slide 3"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="3"
+                      aria-label="Slide 4"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="4"
+                      aria-label="Slide 5"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="5"
+                      aria-label="Slide 6"></button>
+               <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="6"
+                      aria-label="Slide 7"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="7"
+                      aria-label="Slide 8"></button>                     
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="8"
+                      aria-label="Slide 9"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="9"
+                      aria-label="Slide 10"></button>
+            </div>
+              <div class="carousel-inner rounded-4">
+                <div class="carousel-item active">
+                  <img
+                    src="/assets/images/galeri1.jpeg"
+                    class="d-block w-100"
+                     />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri2.jpeg"
+                    class="d-block w-100"
+                     />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri3.jpeg"
+                    class="d-block w-100"
+                     />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri4.jpeg"
+                    class="d-block w-100"
+                     />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                     />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+              </div>
 
-<div id="carousel-foto-dua" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button"
-            data-bs-target="#carousel-foto-dua"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-dua"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-dua"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-    <button type="button"
-            data-bs-target="#carousel-foto-dua"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
-  </div>
-  <div class="carousel-inner rounded-4">
-    <div class="carousel-item active">
-      <img src="/assets/images/galeri5.jpeg" class="d-block w-100" onclick="util.modal(this)" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri6.jpeg" class="d-block w-100" onclick="util.modal(this)" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri7.jpeg" class="d-block w-100" onclick="util.modal(this)" />
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/galeri8.jpeg" class="d-block w-100" onclick="util.modal(this)" />
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carousel-foto-dua" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carousel-foto-dua" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carousel-foto-satu"
+                data-bs-slide="prev">
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carousel-foto-satu"
+                data-bs-slide="next">
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+            <div
+              id="carousel-foto-dua"
+              data-aos="fade-up"
+              data-aos-duration="1500"
+              class="carousel slide mt-4"
+              data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="0"
+                  class="active"
+                  aria-current="true"
+                  aria-label="Slide 1"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="3"
+                  aria-label="Slide 4"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="4"
+                  aria-label="Slide 5"></button>  
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="5"
+                  aria-label="Slide 6"></button>  
+              </div>
+
+              <div class="carousel-inner rounded-4">
+                <div class="carousel-item active">
+                  <img
+                    src="/assets/images/galeri5.jpeg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri6.jpeg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri7.jpeg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri8.jpeg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+              </div>
+
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carousel-foto-dua"
+                data-bs-slide="prev">
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carousel-foto-dua"
+                data-bs-slide="next">
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
 
       </section>
 
